Added a watch task, using eventmachine to do a periodic timer

--- a/lib/lnl-stats/haml/leaderboard.haml
+++ b/lib/lnl-stats/haml/leaderboard.haml
@@ -13,7 +13,9 @@
       %header
         %img.tf2logo{src: "img/tf2_logo.png", alt: "Team Fortress 2"}
         .well
-          %h1 LNL Team fortress 2 leaderboard
+          %h1 
+            LNL Team fortress 2 leaderboard
+            %small (#{Time.now.strftime("%Y-%m-%d %k:%M")})
       .page
         %section
           %table.table.table-striped
